Made the ItemTag view interface and started working on chat
